--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Mon Serveur GMod</title>
+  <title>Serveur GMod - Accueil</title>
   <style>
-    body { font-family: Arial; text-align: center; background-color: #111; color: white; }
+    body { background: #121212; color: #fff; font-family: sans-serif; text-align: center; padding: 40px; }
     a.button {
-      background: #28a745;
-      padding: 10px 20px;
+      background-color: #1e90ff;
       color: white;
-      text-decoration: none;
+      padding: 12px 20px;
       border-radius: 8px;
+      text-decoration: none;
+      margin: 10px;
       display: inline-block;
-      margin-top: 20px;
     }
+    h1 { font-size: 36px; }
   </style>
 </head>
 <body>
   <h1>Bienvenue sur notre serveur GMod !</h1>
-  <p>Rejoignez-nous pour vivre une expérience unique !</p>
-  <a class="button" href="reglement.html">Lire le règlement</a>
+  <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
+  <a class="button" href="reglement.html">📜 Règlement</a>
+  <a class="button" href="boutique.html">🛒 Boutique</a>
+  <a class="button" href="mises-a-jour.html">📰 Mises à jour</a>
 </body>
 </html>
