--- a/reglement.html
+++ b/reglement.html
@@ -2,16 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Règlement</title>
+  <title>Règlement - Serveur GMod</title>
 </head>
-<body>
-  <h1>Règlement du Serveur</h1>
+<body style="font-family: Arial; background: #111; color: #eee; padding: 30px;">
+  <h1>📜 Règlement du Serveur</h1>
   <ul>
-    <li>Respectez les autres joueurs</li>
-    <li>Pas de triche</li>
-    <li>Pas d'insultes ou de propos haineux</li>
-    <!-- ajoute ce que tu veux -->
+    <li>Respectez les autres joueurs.</li>
+    <li>Interdiction de tricher ou d’exploiter des bugs.</li>
+    <li>Pas de langage offensant, haineux ou raciste.</li>
+    <li>Le staff est à respecter en toutes circonstances.</li>
+    <li>Le roleplay doit être respecté si activé.</li>
   </ul>
-  <a href="index.html">Retour à l'accueil</a>
+  <a href="index.html" style="color: #1e90ff;">← Retour à l'accueil</a>
 </body>
 </html>
