--- a/boutique.html
+++ b/boutique.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Boutique - Serveur GMod</title>
+</head>
+<body style="font-family: Arial; background: #222; color: #fff; text-align: center; padding: 40px;">
+  <h1>🛒 Boutique du Serveur</h1>
+  <p>Soutenez le serveur et obtenez des avantages !</p>
 
+  <!-- Exemple de bouton PayPal -->
+  <form action="https://www.paypal.com/donate" method="post" target="_blank">
+    <input type="hidden" name="hosted_button_id" value="TON_ID_PAYPAL">
+    <input type="submit" value="Faire un don via PayPal" style="padding: 10px 20px; background: #ffc439; border: none; border-radius: 8px; cursor: pointer;">
+  </form>
+
+  <p>Merci pour votre soutien ❤️</p>
+  <a href="index.html" style="color: #1e90ff;">← Retour à l'accueil</a>
+</body>
+</html>
