--- a/index.html
+++ b/index.html
@@ -4,23 +4,42 @@
   <meta charset="UTF-8">
   <title>Serveur GMod - Accueil</title>
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     body {
       background-color: #121212;
       color: white;
       font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
+      overflow-x: hidden;
     }
-    header {
-      padding: 30px 10px 10px;
+    .side-image {
+      position: fixed;
+      top: 0;
+      width: 20%;
+      height: 100%;
+      object-fit: cover;
+      z-index: 0;
+    }
+    .left-image {
+      left: 0;
+    }
+    .right-image {
+      right: 0;
+    }
+    .main-content {
+      position: relative;
+      z-index: 1;
+      margin-left: 20%;
+      margin-right: 20%;
+      padding: 40px 20px;
+      text-align: center;
     }
     .logo {
       width: 150px;
-      height: auto;
-    }
-    nav {
-      margin-top: 20px;
+      margin-bottom: 20px;
     }
     .button {
       background-color: #1e90ff;
@@ -30,23 +49,6 @@
       border-radius: 8px;
       margin: 5px;
       display: inline-block;
-    }
-    .content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 40px auto;
-      max-width: 1000px;
-      padding: 0 20px;
-    }
-    .image {
-      width: 200px;
-      height: auto;
-      border-radius: 12px;
-    }
-    .center {
-      flex-grow: 1;
-      padding: 0 40px;
     }
     .dropdown {
       position: relative;
@@ -59,7 +61,7 @@
       min-width: 160px;
       box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
       border-radius: 8px;
-      z-index: 1;
+      z-index: 2;
     }
     .dropdown-content a {
       color: white;
@@ -78,15 +80,23 @@
       margin-top: 60px;
       padding: 30px;
       background-color: #1a1a1a;
+      border-radius: 12px;
     }
   </style>
 </head>
 <body>
-  <header>
+
+  <!-- Images étendues -->
+  <img src="image1.png" alt="Image gauche" class="side-image left-image">
+  <img src="image2.png" alt="Image droite" class="side-image right-image">
+
+  <!-- Contenu principal -->
+  <div class="main-content">
     <img src="logo.png" alt="Logo Serveur" class="logo">
     <h1>Bienvenue sur notre serveur GMod !</h1>
     <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
-    <nav>
+    
+    <nav style="margin-top: 20px;">
       <a class="button" href="reglement.html">📜 Règlement</a>
       <a class="button" href="boutique.html">🛒 Boutique</a>
       <a class="button" href="mises-a-jour.html">📰 Mises à jour</a>
@@ -94,26 +104,21 @@
       <div class="dropdown">
         <a class="button">🎭 Rôles</a>
         <div class="dropdown-content">
-          <a href="#">🎯 Objectif</a>
-          <a href="reglement.html">📜 Règlement</a>
-          <a href="#">🛠️ Fonctionnement</a>
+          <a href="#">Département du Corps de sûreté</a>
+          <a href="#">Département administratif</a>
+          <a href="#">Département médicale</a>
+          <a href="#">Département Ingénierie et Service Technique</a>
+          <a href="#">Département Scientifique et de Recherche</a>
+          <a href="#">SCP</a>
         </div>
       </div>
     </nav>
-  </header>
 
-  <section class="content">
-    <img src="image1.png" alt="Image gauche" class="image">
-    <div class="center">
-      <p>Explorez notre monde unique, scripté avec soin pour le fun et l'immersion !</p>
-    </div>
-    <img src="image2.png" alt="Image droite" class="image">
-  </section>
-
-  <section class="about">
-    <h2>À propos</h2>
-    <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
-    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
-  </section>
+    <section class="about">
+      <h2>À propos</h2>
+      <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
+      <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
+    </section>
+  </div>
 </body>
 </html>
