--- a/boutique.html
+++ b/boutique.html
@@ -9,7 +9,7 @@
   <p>Soutenez le serveur et obtenez des avantages !</p>
 
   <!-- Exemple de bouton PayPal -->
-  <form action="https://www.paypal.com/donate" method="post" target="_blank">
+  <form action="paypal.me/GateSCP" method="post" target="_blank">
     <input type="hidden" name="hosted_button_id" value="TON_ID_PAYPAL">
     <input type="submit" value="Faire un don via PayPal" style="padding: 10px 20px; background: #ffc439; border: none; border-radius: 8px; cursor: pointer;">
   </form>
