--- a/reglement.html
+++ b/reglement.html
@@ -12,16 +12,10 @@
       padding: 0;
     }
 
-    .banner {
-      background: linear-gradient(90deg, #1e90ff, #00bfff);
-      padding: 30px;
-      text-align: center;
-      color: white;
-    }
-
-    .banner h1 {
-      margin: 0;
-      font-size: 2.5em;
+    .banner-img {
+      width: 100%;
+      height: auto;
+      display: block;
     }
 
     .container {
@@ -69,102 +63,5 @@
 </head>
 <body>
 
-  <div class="banner">
-    <h1>📜 Règlement du Serveur SCP RP</h1>
-  </div>
-
-  <div class="container">
-    <h3>
-      Nous tenons tout d’abord à vous rappeler que vous êtes sur un serveur rôle play SCP, et que nous vous demandons de suivre les règles qui s'appliquent.<br>
-      S’il en est autrement, le staff sera en droit de vous sanctionner avec la sanction qui leur semble appropriée.<br>
-      En cas de contestation, il vous sera possible de faire une demande de déban ou de réduction de sanction si le staff s’accorde que vous le méritez.
-    </h3>
-
-    <ul>
-      <li><b>Comportement RP général :</b><br>
-        Nous vous demandons de bien vouloir vous comporter en général comme vous le feriez dans la vraie vie.<br>
-        Autrement dit, nous vous demandons de ne pas bunny hope, jouer avec les portes ou autre comportement non approprié qui dérange les autres joueurs.
-      </li>
-
-      <li><b>Respect des autres :</b><br>
-        Nous vous demandons de rester respectueux envers les autres joueurs.<br>
-        L’erreur humaine existe, ne l’oubliez pas, et tout le monde ne pense pas comme vous.<br>
-        Les critiques blessantes et insultes gratuites qui gênent le joueur concerné seront sanctionnées, et plus lourdement si répétées.<br>
-        Nous ne disons pas que les insultes sont interdites, mais faites attention à qui vous les dites et dans quelles circonstances.
-      </li>
-
-      <li><b>HRP :</b><br>
-        Le HRP vocal quand vous êtes dans des situations est à ABSOLUMENT PAS tolérer ; cela peut gêner voire casser la scène.<br>
-        Le HRP hors scène sera toléré.<br>
-        Si vous avez un problème que vous voulez signaler aux personnes concernées, faites un ticket au staff, et vous pourrez parler tranquillement sans déranger les autres joueurs.
-      </li>
-
-      <li><b>Pain RP :</b><br>
-        Il paraît que de se faire taper, tirer dessus, ou autres blessures qui vous ont été infligées, font mal.<br>
-        Nous vous demandons d'appliquer un pain RP correct en fonction de la blessure que vous avez reçue.<br>
-        Nous savons aussi qu’il peut y avoir l'adrénaline comme justification, mais tout abus (surtout pour les classes-D) sera sanctionné par le staff à la hauteur de la faute RP.
-      </li>
-
-      <li><b>Fear RP :</b><br>
-        Les armes font peur et le nombre d'adversaires aussi.<br>
-        En RP vous êtes demandé d’appliquer cela.<br>
-        Bien évidemment, votre rôle peut changer votre fear RP mais il reste présent.<br>
-        Tout abus sera sanctionné, et lourdement si à cause d’un manque de fear RP d’autres joueurs meurent ou se retrouvent dans une situation défavorable à cause de votre erreur.
-      </li>
-
-      <li><b>Props :</b><br>
-        Il est interdit de faire apparaître des props pour les gens qui n’en ont pas l’autorisation du staff.<br>
-        Une simple demande dans le chat suffit pour avoir cette autorisation si la demande semble logique ou que vous êtes dans le RP.<br>
-        Mais tout abus signalé sur l’utilisation des props comme le props surf ou autres choses no RP sera sanctionné par le staff avec la sanction qu’ils pensent appropriée.<br>
-        Une interdiction pure et simple d’utiliser les props pour certaines personnes est envisageable.
-      </li>
-
-      <li><b>Freekill :</b><br>
-        Le Freekill est bien évidemment interdit.<br>
-        Vous aurez bien sûr l’occasion de vous expliquer avec le staff et la victime/l’accusé sur les faits si le freekill ne concerne qu'une personne,<br>
-        mais si il concerne un freekill de masse vos chances de vous expliquer seront très basses.
-      </li>
-
-      <li><b>WinRP :</b><br>
-        Le win RP ou autrement dit “vouloir gagner à tout prix”, particulièrement en ne respectant pas le règlement,<br>
-        au détriment des autres joueurs ainsi qu’en utilisant le règlement à votre avantage, sera sanctionné à la hauteur des faits.
-      </li>
-
-      <li><b>Force RP :</b><br>
-        Le force RP est à éviter surtout quand vous n’êtes pas le supérieur sur place.<br>
-        Vous pouvez essayer de convaincre les gens de suivre vos plans mais pas les forcer à vous suivre,<br>
-        sauf bien évidemment si vous êtes leur supérieur et que c’est un ordre.<br>
-        Il va de soi que vous devez suivre les ordres de vos supérieurs, que vous pouvez quand même remettre en question s'ils sont vraiment trop dangereux pour aucune raison.
-      </li>
-
-      <li><b>Metagaming :</b><br>
-        Le metagaming, autrement dit vous servir d’informations que vous avez eues en HRP ou avec un autre personnage que celui que vous jouez actuellement, est strictement interdit.<br>
-        Des sanctions appropriées seront mises en fonction de la faute commise et de la gêne qu’elle a occasionnée.
-      </li>
-
-      <li><b>New Life Rule (NLR) :</b><br>
-        Quand vous mourrez dans une scène RP, il vous est interdit de retourner directement sur la scène avec le personnage concerné.<br>
-        Si vous prenez un autre personnage qui est nécessaire à la scène, il vous sera autorisé de revenir (exemple : DIST qui va réparer un confinement).<br>
-        Si ce n’est pas le cas et que vous forcez juste pour pouvoir assister à une scène que vous avez perdue, vous serez sanctionné.<br>
-        Pendant les brèches de confinement, nous vous demandons d’attendre environ 5 minutes avant de vous remettre en agent de sécurité, seulement s'il n’y a plus assez d’agents pour gérer la situation.
-      </li>
-
-      <li><b>Character Kill (CK) :</b><br>
-        Le CK est constamment activé dans le RP normal (sauf quand la mort est due à une faute RP reconnue par le staff).<br>
-        Autrement dit, toute mort créée par les joueurs, à cause des joueurs, dans les règles du RP seront CK.<br>
-        Pour les events, vous serez prévenu au préalable par le staff si il sera activé ou non.<br>
-        Il vous est bien évidemment autorisé de contester un CK, ce à quoi un modérateur donnera son avis final et peut vous sanctionner si vous faites preuve de mauvaise foi.
-      </li>
-
-      <li><b>RP couple / Sexe RP :</b><br>
-        Le RP couple est autorisé, vous avez la complète liberté sur ce sujet.<br>
-        Cependant, le RP sexe est interdit sur le serveur directement (non, la modération n’a pas envie de voir vos /me dans les logs pour dire que vous faites des choses).<br>
-        Nous vous demandons donc si vous voulez faire ce type de RP de vous retrouver avec votre âme sœur sur Discord ou autre, mais pas in-game.
-      </li>
-    </ul>
-
-    <a class="back-link" href="index.html">← Retour à l'accueil</a>
-  </div>
-
-</body>
-</html>
+  <!--  Bannière image en haut -->
+  <img src="banniere.jpg" alt="Bannière du serveur SCP-RP" class="banner-img">
