--- a/reglement.html
+++ b/reglement.html
@@ -12,56 +12,91 @@
       padding: 0;
     }
 
-    .banner-img {
+    .banner {
       width: 100%;
       height: auto;
       display: block;
     }
 
-    .container {
-      padding: 40px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    h3 {
-      font-weight: normal;
-      margin-bottom: 30px;
-      color: #ccc;
+    .content {
+      padding: 30px;
     }
 
     ul {
-      list-style-type: disc;
-      padding-left: 20px;
+      line-height: 1.8;
     }
 
     li {
-      margin-bottom: 30px;
-      line-height: 1.8;
+      margin-bottom: 20px;
     }
 
     b {
       color: #1e90ff;
     }
 
-    a.back-link {
-      display: inline-block;
-      margin-top: 30px;
-      text-decoration: none;
+    a {
       color: #1e90ff;
-      background-color: #222;
-      padding: 10px 20px;
-      border-radius: 8px;
-      transition: background-color 0.3s;
-    }
-
-    a.back-link:hover {
-      background-color: #1e90ff;
-      color: white;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
 
-  <!--  Bannière image en haut -->
-  <img src="banniere.jpg" alt="Bannière du serveur SCP-RP" class="banner-img">
+  <!-- ✅ BANNIÈRE EN HAUT -->
+  <img src="banniere.jpg" alt="Bannière du serveur SCP-RP" class="banner">
+
+  <!-- ✅ CONTENU DE LA PAGE -->
+  <div class="content">
+    <h1>📜 Règlement du Serveur</h1>
+    <h3>
+      Nous tenons tout d’abord à vous rappeler que vous êtes sur un serveur rôle play SCP,<br>
+      et que nous vous demandons de suivre les règles qui s'appliquent.<br>
+      S’il en est autrement, le staff sera en droit de vous sanctionner avec la sanction qui leur semble appropriée.<br>
+      En cas de contestation, il vous sera possible de faire une demande de déban ou de réduction de sanction<br>
+      si le staff s’accorde que vous le méritez.
+    </h3>
+
+    <ul>
+      <li><b>Comportement RP général :</b> Nous vous demandons de bien vouloir vous comporter comme dans la vraie vie.<br>
+      Pas de bunny hop, pas de spam de portes ou autres comportements perturbateurs.</li>
+
+      <li><b>Respect des autres :</b> Soyez respectueux. Les insultes blessantes seront sanctionnées.<br>
+      Les erreurs existent, chacun pense différemment. Attention à vos paroles.</li>
+
+      <li><b>HRP :</b> Le HRP vocal pendant une scène est interdit.<br>
+      Faites un ticket au staff si vous avez un souci.</li>
+
+      <li><b>Pain RP :</b> Une blessure fait mal, appliquez un comportement RP en conséquence.<br>
+      Les abus seront sanctionnés (surtout chez les classes-D).</li>
+
+      <li><b>Fear RP :</b> Les armes et les ennemis font peur. Réagissez en conséquence selon votre rôle.<br>
+      Les abus seront sévèrement sanctionnés.</li>
+
+      <li><b>Props :</b> Seuls les joueurs autorisés peuvent utiliser les props.<br>
+      Pas de props surf ou autres actions no-RP.</li>
+
+      <li><b>Freekill :</b> Strictement interdit. Les explications sont possibles sauf en cas de freekill de masse.</li>
+
+      <li><b>WinRP :</b> Jouer pour "gagner" à tout prix est interdit.<br>
+      Cela nuit au RP et sera puni.</li>
+
+      <li><b>Force RP :</b> Ne forcez pas les autres sauf si vous êtes leur supérieur.<br>
+      Les ordres doivent rester cohérents et réalistes.</li>
+
+      <li><b>Metagaming :</b> Utiliser des infos obtenues hors RP est interdit.<br>
+      Des sanctions seront appliquées selon la gravité.</li>
+
+      <li><b>New life rule (NLR) :</b> Ne revenez pas directement sur une scène RP après une mort.<br>
+      Attendez 5 minutes minimum en cas de brèche, sauf si nécessaire.</li>
+
+      <li><b>Character Kill :</b> Le CK est permanent dans le RP sauf en cas de faute reconnue.<br>
+      Les events seront annoncés à part. Vous pouvez contester un CK au besoin.</li>
+
+      <li><b>RP couple / sexe RP :</b> Les couples sont autorisés mais le sexe RP est interdit in-game.<br>
+      Faites ça ailleurs, pas sur le serveur.</li>
+    </ul>
+
+    <a href="index.html">← Retour à l'accueil</a>
+  </div>
+</body>
+</html>
