--- a/reglement.html
+++ b/reglement.html
@@ -12,10 +12,14 @@
       padding: 0;
     }
 
+    .banner-container {
+      text-align: center;
+      padding: 20px 0;
+    }
+
     .banner {
-      width: 100%;
+      width: 20%;
       height: auto;
-      display: block;
     }
 
     .content {
@@ -42,8 +46,10 @@
 </head>
 <body>
 
-  <!-- ✅ BANNIÈRE EN HAUT -->
-  <img src="banniere.jpg" alt="Bannière du serveur SCP-RP" class="banner">
+  <!-- ✅ BANNIÈRE CENTRÉE À 20% -->
+  <div class="banner-container">
+    <img src="banniere.jpg" alt="Bannière du serveur SCP-RP" class="banner">
+  </div>
 
   <!-- ✅ CONTENU DE LA PAGE -->
   <div class="content">
