--- a/reglement.html
+++ b/reglement.html
@@ -12,22 +12,21 @@
       padding: 0;
     }
 
-    .banner-container {
-      text-align: center;
-      padding: 20px 0;
-    }
-
-    .banner {
-      width: 20%;
+    .banner-container img {
+      width: 100%;
       height: auto;
+      display: block;
     }
 
     .content {
       padding: 30px;
+      max-width: 1000px;
+      margin: auto;
     }
 
     ul {
       line-height: 1.8;
+      padding-left: 20px;
     }
 
     li {
@@ -46,9 +45,9 @@
 </head>
 <body>
 
-  <!-- ✅ BANNIÈRE CENTRÉE À 20% -->
+  <!-- ✅ BANNIÈRE EN HAUT, LARGEUR 100% -->
   <div class="banner-container">
-    <img src="banniere.jpg" alt="Bannière du serveur SCP-RP" class="banner">
+    <img src="banniere.jpg" alt="Bannière du serveur SCP-RP">
   </div>
 
   <!-- ✅ CONTENU DE LA PAGE -->
