--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       color: white;
       font-family: Arial, sans-serif;
       overflow-x: hidden;
+
+      /* Flexbox pour coller about en bas */
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     .side-image {
       position: fixed;
@@ -36,6 +41,9 @@
       margin-right: 20%;
       padding: 40px 20px;
       text-align: center;
+
+      /* Prend tout l'espace disponible */
+      flex-grow: 1;
     }
     .logo {
       width: 150px;
@@ -77,10 +85,13 @@
       display: block;
     }
     .about {
-      margin-top: 60px;
       padding: 30px;
       background-color: #1a1a1a;
       border-radius: 12px;
+      margin-left: 20%;
+      margin-right: 20%;
+      text-align: center;
+      z-index: 1;
     }
   </style>
 </head>
@@ -113,12 +124,14 @@
         </div>
       </div>
     </nav>
-
-    <section class="about">
-      <h2>À propos</h2>
-      <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
-      <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
-    </section>
   </div>
+
+  <!-- Section À propos collée en bas -->
+  <section class="about">
+    <h2>À propos</h2>
+    <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
+    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
+  </section>
+
 </body>
 </html>
