--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
       color: white;
       font-family: Arial, sans-serif;
       overflow-x: hidden;
-
-      /* Flexbox pour coller about en bas */
       display: flex;
       flex-direction: column;
       min-height: 100vh;
@@ -41,8 +39,6 @@
       margin-right: 20%;
       padding: 40px 20px;
       text-align: center;
-
-      /* Prend tout l'espace disponible */
       flex-grow: 1;
     }
     .logo {
@@ -57,6 +53,10 @@
       border-radius: 8px;
       margin: 5px;
       display: inline-block;
+      transition: background 0.3s;
+    }
+    .button:hover {
+      background-color: #0f75d1;
     }
     .dropdown {
       position: relative;
@@ -84,6 +84,43 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
+
+    .steam-collection {
+      margin-top: 50px;
+      padding: 30px;
+      background-color: #1a1a1a;
+      border-radius: 12px;
+      text-align: center;
+    }
+    .steam-collection h2 {
+      margin-bottom: 10px;
+    }
+    .steam-collection p {
+      margin-bottom: 15px;
+      font-size: 1.1em;
+    }
+
+    .carousel-container {
+      position: relative;
+      width: 100%;
+      max-width: 600px;
+      margin: 0 auto 20px;
+      overflow: hidden;
+      border-radius: 12px;
+    }
+
+    .carousel-slide {
+      display: flex;
+      width: 100%;
+      transition: transform 1s ease;
+    }
+
+    .carousel-slide img {
+      width: 100%;
+      height: auto;
+      border-radius: 12px;
+    }
+
     .about {
       padding: 30px;
       background-color: #1a1a1a;
@@ -124,14 +161,42 @@
         </div>
       </div>
     </nav>
+
+    <!-- Section Steam -->
+    <section class="steam-collection">
+      <h2>📦 Collection Steam</h2>
+      <p>Découvrez les addons utilisés sur notre serveur pour profiter de la meilleure expérience !</p>
+
+      <div class="carousel-container">
+        <div class="carousel-slide" id="carousel">
+          <img src="addons/addon1.png" alt="Addon 1">
+          <img src="addons/addon2.png" alt="Addon 2">
+          <img src="addons/addon3.png" alt="Addon 3">
+        </div>
+      </div>
+
+      <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3042213523" target="_blank" class="button">Voir la collection</a>
+    </section>
   </div>
 
-  <!-- Section À propos collée en bas -->
+  <!-- Section À propos -->
   <section class="about">
     <h2>À propos</h2>
     <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
     <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
   </section>
+
+  <!-- JS pour le carrousel -->
+  <script>
+    const carousel = document.getElementById("carousel");
+    let index = 0;
+
+    setInterval(() => {
+      index++;
+      if (index >= carousel.children.length) index = 0;
+      carousel.style.transform = `translateX(-${index * 100}%)`;
+    }, 3000);
+  </script>
 
 </body>
 </html>
