--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
       <div class="carousel-container">
         <div class="carousel-slide" id="carousel">
-          <img src="addons/addon1.png" alt="Addon 1">
-          <img src="addons/addon2.png" alt="Addon 2">
-          <img src="addons/addon3.png" alt="Addon 3">
+          <img src="addons-images/addon1.png" alt="Addon 1">
+          <img src="addons-images/addon2.png" alt="Addon 2">
+          <img src="addons-images/addon3.png" alt="Addon 3">
         </div>
       </div>
 
