--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
     }
 
     .carousel-slide img {
-      width: 30%;
-      height: auto;
+      width: 180px;     /* largeur fixe */
+      height: 120px;    /* hauteur fixe */
       border-radius: 12px;
-      object-fit: cover;
+      object-fit: cover; /* pour que l'image remplisse la boîte sans déformation */
     }
-
+    
     .about {
       padding: 30px;
       background-color: #1a1a1a;
