--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
       margin: 5px;
       display: inline-block;
       transition: background 0.3s;
-      cursor: pointer;
     }
     .button:hover {
       background-color: #0f75d1;
@@ -67,17 +66,17 @@
       display: none;
       position: absolute;
       background-color: #1e1e1e;
-      min-width: 200px;
+      min-width: 160px;
       box-shadow: 0px 8px 16px rgba(0,0,0,0.3);
       border-radius: 8px;
       z-index: 2;
-      text-align: left;
     }
     .dropdown-content a {
       color: white;
       padding: 10px 16px;
       text-decoration: none;
       display: block;
+      text-align: left;
     }
     .dropdown-content a:hover {
       background-color: #333;
@@ -85,7 +84,6 @@
     .dropdown:hover .dropdown-content {
       display: block;
     }
-
     .steam-collection {
       margin-top: 50px;
       padding: 30px;
@@ -100,36 +98,31 @@
       margin-bottom: 15px;
       font-size: 1.1em;
     }
-
+    /* Carrousel styles */
     .carousel-container {
       position: relative;
-      width: 100%;
-      max-width: 600px;
+      width: 600px; /* 3 images x 180px wide */
       margin: 0 auto 20px;
       overflow: hidden;
       border-radius: 12px;
     }
-
     .carousel-track {
       display: flex;
       transition: transform 1s ease;
-      width: max-content;
+      width: max-content; /* largeur automatique en fonction du contenu */
     }
-
     .carousel-slide {
       display: flex;
-      min-width: 100%;
-      justify-content: space-around;
-      gap: 10px;
+      width: 600px; /* largeur d'un slide = 3 images * 180px */
+      justify-content: space-between;
+      flex-shrink: 0; /* empêche le rétrécissement */
     }
-
     .carousel-slide img {
-      width: 180px;     /* largeur fixe */
-      height: 120px;    /* hauteur fixe */
+      width: 180px;
+      height: 120px;
       border-radius: 12px;
-      object-fit: cover; /* pour que l'image remplisse la boîte sans déformation */
+      object-fit: cover;
     }
-    
     .about {
       padding: 30px;
       background-color: #1a1a1a;
@@ -138,13 +131,12 @@
       margin-right: 20%;
       text-align: center;
       z-index: 1;
-      margin-bottom: 40px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Images étendues sur les côtés -->
+  <!-- Images étendues -->
   <img src="image1.png" alt="Image gauche" class="side-image left-image" />
   <img src="image2.png" alt="Image droite" class="side-image right-image" />
 
@@ -153,14 +145,14 @@
     <img src="logo.png" alt="Logo Serveur" class="logo" />
     <h1>Bienvenue sur notre serveur GMod !</h1>
     <p>Rejoignez une communauté active et amusante sur Garry's Mod.</p>
-    
+
     <nav style="margin-top: 20px;">
       <a class="button" href="reglement.html">📜 Règlement</a>
       <a class="button" href="boutique.html">🛒 Boutique</a>
       <a class="button" href="mises-a-jour.html">📰 Mises à jour</a>
 
       <div class="dropdown">
-        <a class="button" href="#">🎭 Rôles</a>
+        <a class="button">🎭 Rôles</a>
         <div class="dropdown-content">
           <a href="#">Département du Corps de sûreté</a>
           <a href="#">Département administratif</a>
@@ -172,7 +164,7 @@
       </div>
     </nav>
 
-    <!-- Section Collection Steam -->
+    <!-- Section Steam -->
     <section class="steam-collection">
       <h2>📦 Collection Steam</h2>
       <p>Découvrez les addons utilisés sur notre serveur pour profiter de la meilleure expérience !</p>
@@ -184,135 +176,44 @@
             <img src="addons-images/addon2.png" alt="Addon 2" />
             <img src="addons-images/addon3.png" alt="Addon 3" />
           </div>
-
           <div class="carousel-slide">
             <img src="addons-images/addon4.png" alt="Addon 4" />
             <img src="addons-images/addon5.png" alt="Addon 5" />
             <img src="addons-images/addon6.png" alt="Addon 6" />
           </div>
-
           <div class="carousel-slide">
             <img src="addons-images/addon7.png" alt="Addon 7" />
             <img src="addons-images/addon8.png" alt="Addon 8" />
             <img src="addons-images/addon9.png" alt="Addon 9" />
           </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon10.png" alt="Addon 10" />
-            <img src="addons-images/addon11.png" alt="Addon 11" />
-            <img src="addons-images/addon12.png" alt="Addon 12" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon13.png" alt="Addon 13" />
-            <img src="addons-images/addon14.png" alt="Addon 14" />
-            <img src="addons-images/addon15.png" alt="Addon 15" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon16.png" alt="Addon 16" />
-            <img src="addons-images/addon17.png" alt="Addon 17" />
-            <img src="addons-images/addon18.png" alt="Addon 18" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon19.png" alt="Addon 19" />
-            <img src="addons-images/addon20.png" alt="Addon 20" />
-            <img src="addons-images/addon21.png" alt="Addon 21" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon22.png" alt="Addon 22" />
-            <img src="addons-images/addon23.png" alt="Addon 23" />
-            <img src="addons-images/addon24.png" alt="Addon 24" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon25.png" alt="Addon 25" />
-            <img src="addons-images/addon26.png" alt="Addon 26" />
-            <img src="addons-images/addon27.png" alt="Addon 27" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon28.png" alt="Addon 28" />
-            <img src="addons-images/addon29.png" alt="Addon 29" />
-            <img src="addons-images/addon30.png" alt="Addon 30" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon31.png" alt="Addon 31" />
-            <img src="addons-images/addon32.png" alt="Addon 32" />
-            <img src="addons-images/addon33.png" alt="Addon 33" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon34.png" alt="Addon 34" />
-            <img src="addons-images/addon35.png" alt="Addon 35" />
-            <img src="addons-images/addon36.png" alt="Addon 36" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon37.png" alt="Addon 37" />
-            <img src="addons-images/addon38.png" alt="Addon 38" />
-            <img src="addons-images/addon39.png" alt="Addon 39" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon40.png" alt="Addon 40" />
-            <img src="addons-images/addon41.png" alt="Addon 41" />
-            <img src="addons-images/addon42.png" alt="Addon 42" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon43.png" alt="Addon 43" />
-            <img src="addons-images/addon44.png" alt="Addon 44" />
-            <img src="addons-images/addon45.png" alt="Addon 45" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon46.png" alt="Addon 46" />
-            <img src="addons-images/addon47.png" alt="Addon 47" />
-            <img src="addons-images/addon48.png" alt="Addon 48" />
-          </div>
-
-          <div class="carousel-slide">
-            <img src="addons-images/addon49.png" alt="Addon 49" />
-            <img src="addons-images/addon50.png" alt="Addon 50" />
-            <img src="addons-images/addon51.png" alt="Addon 51" />
-          </div>
+          <!-- Tu peux ajouter d’autres slides ici en suivant le même modèle -->
         </div>
       </div>
 
-    </section>
-
-    <section class="about">
-      <h2>À propos de notre serveur</h2>
-      <p>
-        Notre serveur Garry's Mod propose une expérience immersive et riche avec des rôles variés, une communauté dynamique, et des addons soigneusement sélectionnés pour garantir un gameplay optimal.
-      </p>
+      <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3042213523" target="_blank" class="button">Voir la collection</a>
     </section>
   </div>
 
+  <!-- Section À propos -->
+  <section class="about">
+    <h2>À propos</h2>
+    <p>Notre serveur Garry's Mod est une aventure passionnée par une équipe motivée. On cherche à proposer une expérience RP fun, stable, et libre d'abus !</p>
+    <p>Rejoignez-nous sur Discord ou en jeu pour en savoir plus.</p>
+  </section>
+
+  <!-- JS pour le carrousel -->
   <script>
-    const track = document.getElementById('carouselTrack');
-    const slides = Array.from(track.children);
-    let currentIndex = 0;
+    const carouselTrack = document.getElementById('carouselTrack');
+    const slides = carouselTrack.children;
+    const slideWidth = 600; // largeur fixe d'un slide en px
+    let index = 0;
 
-    function showSlide(index) {
-      if (index < 0) index = slides.length - 1;
-      else if (index >= slides.length) index = 0;
-      currentIndex = index;
-      const moveAmount = -index * 100;
-      track.style.transform = 'translateX(' + moveAmount + '%)';
-    }
-
-    // Auto slide toutes les 5 secondes
     setInterval(() => {
-      showSlide(currentIndex + 1);
-    }, 5000);
-
-    // Initial display
-    showSlide(0);
+      index++;
+      if (index >= slides.length) index = 0;
+      carouselTrack.style.transform = `translateX(-${index * slideWidth}px)`;
+    }, 3000);
   </script>
+
 </body>
 </html>
