--- a/index.html
+++ b/index.html
@@ -186,6 +186,52 @@
             <img src="addons-images/addon8.png" alt="Addon 8" />
             <img src="addons-images/addon9.png" alt="Addon 9" />
           </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon10.png" alt="Addon 10" />
+            <img src="addons-images/addon11.png" alt="Addon 11" />
+            <img src="addons-images/addon12.png" alt="Addon 12" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon13.png" alt="Addon 13" />
+            <img src="addons-images/addon14.png" alt="Addon 14" />
+            <img src="addons-images/addon15.png" alt="Addon 15" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon16.png" alt="Addon 16" />
+            <img src="addons-images/addon17.png" alt="Addon 17" />
+            <img src="addons-images/addon18.png" alt="Addon 18" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon19.png" alt="Addon 19" />
+            <img src="addons-images/addon20.png" alt="Addon 20" />
+            <img src="addons-images/addon21.png" alt="Addon 21" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon22.png" alt="Addon 22" />
+            <img src="addons-images/addon23.png" alt="Addon 23" />
+            <img src="addons-images/addon24.png" alt="Addon 24" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon25.png" alt="Addon 25" />
+            <img src="addons-images/addon26.png" alt="Addon 26" />
+            <img src="addons-images/addon27.png" alt="Addon 27" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon28.png" alt="Addon 28" />
+            <img src="addons-images/addon29.png" alt="Addon 29" />
+            <img src="addons-images/addon30.png" alt="Addon 30" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon31.png" alt="Addon 31" />
+            <img src="addons-images/addon32.png" alt="Addon 32" />
+            <img src="addons-images/addon33.png" alt="Addon 33" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon34.png" alt="Addon 34" />
+            <img src="addons-images/addon35.png" alt="Addon 35" />
+            <img src="addons-images/addon36.png" alt="Addon 36" />
+          </div>
+          
           <!-- Tu peux ajouter d’autres slides ici en suivant le même modèle -->
         </div>
       </div>
