--- a/index.html
+++ b/index.html
@@ -231,6 +231,80 @@
             <img src="addons-images/addon35.png" alt="Addon 35" />
             <img src="addons-images/addon36.png" alt="Addon 36" />
           </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon37.png" alt="Addon 37" />
+            <img src="addons-images/addon38.png" alt="Addon 38" />
+            <img src="addons-images/addon39.png" alt="Addon 39" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon40.png" alt="Addon 40" />
+            <img src="addons-images/addon41.png" alt="Addon 41" />
+            <img src="addons-images/addon42.png" alt="Addon 42" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon43.png" alt="Addon 43" />
+            <img src="addons-images/addon44.png" alt="Addon 44" />
+            <img src="addons-images/addon45.png" alt="Addon 45" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon46.png" alt="Addon 46" />
+            <img src="addons-images/addon47.png" alt="Addon 47" />
+            <img src="addons-images/addon48.png" alt="Addon 48" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon49.png" alt="Addon 49" />
+            <img src="addons-images/addon50.png" alt="Addon 50" />
+            <img src="addons-images/addon51.png" alt="Addon 51" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon52.png" alt="Addon 52" />
+            <img src="addons-images/addon53.png" alt="Addon 53" />
+            <img src="addons-images/addon54.png" alt="Addon 54" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon55.png" alt="Addon 55" />
+            <img src="addons-images/addon56.png" alt="Addon 56" />
+            <img src="addons-images/addon57.png" alt="Addon 57" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon58.png" alt="Addon 58" />
+            <img src="addons-images/addon59.png" alt="Addon 59" />
+            <img src="addons-images/addon60.png" alt="Addon 60" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon61.png" alt="Addon 61" />
+            <img src="addons-images/addon62.png" alt="Addon 62" />
+            <img src="addons-images/addon63.png" alt="Addon 63" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon64.png" alt="Addon 64" />
+            <img src="addons-images/addon65.png" alt="Addon 65" />
+            <img src="addons-images/addon66.png" alt="Addon 66" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon67.png" alt="Addon 67" />
+            <img src="addons-images/addon68.png" alt="Addon 68" />
+            <img src="addons-images/addon69.png" alt="Addon 69" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon70.png" alt="Addon 70" />
+            <img src="addons-images/addon71.png" alt="Addon 71" />
+            <img src="addons-images/addon72.png" alt="Addon 72" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon73.png" alt="Addon 73" />
+            <img src="addons-images/addon74.png" alt="Addon 74" />
+            <img src="addons-images/addon75.png" alt="Addon 75" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon76.png" alt="Addon 76" />
+            <img src="addons-images/addon77.png" alt="Addon 77" />
+            <img src="addons-images/addon78.png" alt="Addon 78" />
+          </div>
+          <div class="carousel-slide">
+            <img src="addons-images/addon79.png" alt="Addon 79" />
+            <img src="addons-images/addon80.png" alt="Addon 80" />
+          </div>
           
           <!-- Tu peux ajouter d’autres slides ici en suivant le même modèle -->
         </div>
