--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="dropdown">
         <a class="button">🎭 Rôles</a>
         <div class="dropdown-content">
-          <a href="#">Département du Corps de sûreté</a>
+          <a href="corps_securite.html">Département du Corps de sûreté</a>
           <a href="#">Département administratif</a>
           <a href="#">Département médicale</a>
           <a href="#">Département Ingénierie et Service Technique</a>
