--- a/corps_securite.html
+++ b/corps_securite.html
@@ -3,7 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <title>Département du Corps de Sûreté</title>
-    <link href="style.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #0f0f0f;
+            color: #ffffff;
+            margin: 0;
+            padding: 20px;
+        }
+
+        header, footer {
+            background-color: #202020;
+            padding: 15px;
+            text-align: center;
+        }
+
+        h1, h2, h3 {
+            color: #00b4d8;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+
+        table, th, td {
+            border: 1px solid #ffffff33;
+        }
+
+        th, td {
+            padding: 12px;
+            text-align: center;
+        }
+
+        thead {
+            background-color: #1a1a1a;
+        }
+
+        section {
+            margin-bottom: 40px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -32,48 +73,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Recrue Garde</td>
-                    <td>Niveau 1</td>
-                    <td>Niveau 1</td>
-                    <td>Safe à Euclid</td>
-                    <td>Assistance basique</td>
-                </tr>
-                <tr>
-                    <td>Garde (Médecin / Spé. Classe-D)</td>
-                    <td>Niveau 2</td>
-                    <td>Niveau 2</td>
-                    <td>Safe à Keter (sauf Keter)</td>
-                    <td>Peut donner des ordres aux recrues</td>
-                </tr>
-                <tr>
-                    <td>Garde Confirmé</td>
-                    <td>Niveau 2</td>
-                    <td>Niveau 2</td>
-                    <td>Safe à Keter (sauf Keter)</td>
-                    <td>Encadre les gardes inférieurs</td>
-                </tr>
-                <tr>
-                    <td>Garde Sénior</td>
-                    <td>Niveau 2</td>
-                    <td>Niveau 2</td>
-                    <td>Safe à Keter</td>
-                    <td>Encadre les gardes inférieurs</td>
-                </tr>
-                <tr>
-                    <td>Sous-Chef Garde</td>
-                    <td>Niveau 3</td>
-                    <td>Niveau 3</td>
-                    <td>Safe à Keter</td>
-                    <td>Bras droit du chef garde</td>
-                </tr>
-                <tr>
-                    <td>Chef Garde</td>
-                    <td>Niveau 3</td>
-                    <td>It. 3 (général), It. 4 (sécurité)</td>
-                    <td>Approfondies</td>
-                    <td>Dirige tous les gardes</td>
-                </tr>
+                <tr><td>Recrue Garde</td><td>Niveau 1</td><td>Niveau 1</td><td>Safe à Euclid</td><td>Assistance basique</td></tr>
+                <tr><td>Garde (Médecin / Spé. Classe-D)</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter (sauf Keter)</td><td>Peut donner des ordres aux recrues</td></tr>
+                <tr><td>Garde Confirmé</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter (sauf Keter)</td><td>Encadre les gardes inférieurs</td></tr>
+                <tr><td>Garde Sénior</td><td>Niveau 2</td><td>Niveau 2</td><td>Safe à Keter</td><td>Encadre les gardes inférieurs</td></tr>
+                <tr><td>Sous-Chef Garde</td><td>Niveau 3</td><td>Niveau 3</td><td>Safe à Keter</td><td>Bras droit du chef garde</td></tr>
+                <tr><td>Chef Garde</td><td>Niveau 3</td><td>It. 3 (général), It. 4 (sécurité)</td><td>Approfondies</td><td>Dirige tous les gardes</td></tr>
             </tbody>
         </table>
 
