--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="dropdown-content">
           <a href="corps_securite.html">Département du Corps de sûreté</a>
           <a href="departemnt_administratif.html">Département administratif</a>
-          <a href="#">Département médicale</a>
+          <a href="departement_medical.html">Département médicale</a>
           <a href="#">Département Ingénierie et Service Technique</a>
           <a href="#">Département Scientifique et de Recherche</a>
           <a href="#">SCP</a>
