--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           <a href="corps_securite.html">Département du Corps de sûreté</a>
           <a href="departemnt_administratif.html">Département administratif</a>
           <a href="departement_medical.html">Département médicale</a>
-          <a href="#">Département Ingénierie et Service Technique</a>
+          <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
           <a href="#">Département Scientifique et de Recherche</a>
           <a href="#">SCP</a>
         </div>
