--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <a href="departemnt_administratif.html">Département administratif</a>
           <a href="departement_medical.html">Département médicale</a>
           <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
-          <a href="#">Département Scientifique et de Recherche</a>
+          <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
           <a href="#">SCP</a>
         </div>
       </div>
