--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <a href="departement_medical.html">Département médicale</a>
           <a href="departement_technique.html">Département Ingénierie et Service Technique</a>
           <a href="departement_scientifique.html">Département Scientifique et de Recherche</a>
-          <a href="#">SCP</a>
+          <a href="SCP.html">SCP</a>
         </div>
       </div>
     </nav>
