--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
       <div class="dropdown">
         <a class="button">🎭 Rôles</a>
         <div class="dropdown-content">
+          <a href="iteration.html">Les itérations</a>
+          <a href="classe_d.html">Les itérations</a>
           <a href="corps_securite.html">Département du Corps de sûreté</a>
           <a href="departement_administratif.html">Département administratif</a>
           <a href="departement_medical.html">Département médicale</a>
