--- a/mises-a-jour.html
+++ b/mises-a-jour.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mises à jour - Serveur GMod</title>
 </head>
 <body style="font-family: Arial; background: #000; color: #fff; padding: 30px;">
